<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">交通糾察-新北市</string>
    <string name="title_activity_make_form">MakeFormActivity</string>
    <string name="title_make_form">製作檢舉表單</string>
    <string name="title_activity_main">交通糾察-新北市</string>
    <string name="hello_world">歡迎使用\n輕觸新增檢舉表單</string>
    <string name="action_settings">Settings</string>
    <string name="evidence_picture">舉證照片</string>
    <string name="cancel">取消</string>
    <string name="submit">提交</string>
    <string name="date">日期</string>
    <string name="time">時間</string>
    <string name="add">新增</string>
    <string name="address">地址</string>
    <string name="phone">電話</string>
    <string name="email_address">Gmail帳號</string>
    <string name="email_password">Gmail密碼</string>
    <string name="title_activity_how_to">說明</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="producing_document">產生檢舉表單中...\n</string>

    <string name="alert_dialog_ok">好</string>
    <string name="alert_dialog_cancel">取消</string>
    <string name="alert_dialog_title_delete_data">刪除此筆資料</string>
    <string name="alert_dialog_title_delete_database">刪除所有資料</string>



</resources>
