<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView">





    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">


        <TextView
            style="@android:style/TextAppearance.Large"
            tools:context="com.liaobeiah.app.MakeFormFragment"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:text="@string/evidence_picture"
            android:paddingBottom="1dp"
            android:paddingLeft="16dp"
            android:textStyle="bold"
            android:paddingTop="16dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:paddingLeft="5dp"
            android:paddingRight="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="128dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:padding="2dp"
                android:background="@drawable/dark_grey_transparent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView1"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:onClick="onImageViewClicked"
                    android:cropToPadding="true"
                    android:scaleType="fitXY" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="照片1"
                    android:id="@+id/textView5"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:background="@drawable/dark_grey_transparent"
                    android:padding="8dp"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:padding="2dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView2"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:onClick="onImageViewClicked"
                    android:cropToPadding="true"
                    android:scaleType="fitXY" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="照片2"
                    android:id="@+id/textView9"
                    android:gravity="center"
                    android:shadowColor="@color/black_overlay"
                    android:singleLine="false"
                    android:textColor="#FFFFFF"
                    android:background="@drawable/dark_grey_transparent"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:textStyle="bold" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:padding="2dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView3"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:onClick="onImageViewClicked"
                    android:scaleType="fitXY"
                    android:cropToPadding="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="照片3"
                    android:id="@+id/textView10"
                    android:gravity="center" />
            </FrameLayout>
        </LinearLayout>

        <TextView
            style="?android:attr/textAppearanceLarge"
            tools:context="com.liaobeiah.app.MakeFormFragment"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:text="@string/date"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:paddingLeft="5dp"
            android:paddingRight="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />


        <TextView
            style="?android:attr/textAppearanceLarge"
            tools:context="com.liaobeiah.app.MakeFormFragment"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/textViewDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textIsSelectable="false"
            android:text="2014年1月26日"
            android:textAlignment="gravity"
            android:layout_gravity="center"
            android:gravity="center"
            android:onClick="onDateViewClicked"
            android:clickable="true" />

        <TextView
            style="?android:attr/textAppearanceLarge"
            tools:context="com.liaobeiah.app.MakeFormFragment"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:text="@string/time"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:paddingLeft="5dp"
            android:paddingRight="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <TextView
            style="?android:attr/textAppearanceLarge"
            tools:context="com.liaobeiah.app.MakeFormFragment"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/textViewTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textIsSelectable="true"
            android:text="時間"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onTimeViewClicked" />

        <TextView
            style="?android:attr/textAppearanceLarge"
            tools:context="com.liaobeiah.app.MakeFormFragment"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:text="地點"
            android:textStyle="bold"
            android:paddingLeft="16dp"
            android:paddingTop="16dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:paddingLeft="5dp"
            android:paddingRight="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextLocation"
            android:hint="請輸入違規地點" />

        <TextView
            style="?android:attr/textAppearanceLarge"
            tools:context="com.liaobeiah.app.MakeFormFragment"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:text="違規車牌"
            android:layout_gravity="center"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:textStyle="bold" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:paddingLeft="5dp"
            android:paddingRight="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textCapCharacters"
            android:ems="10"
            android:id="@+id/editTextVehicleLicense"
            android:hint="請輸入車牌" />

        <TextView
            style="?android:attr/textAppearanceLarge"
            tools:context="com.liaobeiah.app.MakeFormFragment"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:text="違規原因"
            android:layout_gravity="center"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:paddingLeft="5dp"
            android:paddingRight="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_reason" />

        <TextView
            style="?android:attr/textAppearanceLarge"
            tools:context="com.liaobeiah.app.MakeFormFragment"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:text="補充說明"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:paddingLeft="16dp" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:paddingLeft="5dp"
            android:paddingRight="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editText3"
            android:hint="請輸入補充說明" />

        <TextView
            style="?android:attr/textAppearanceLarge"
            tools:context="com.liaobeiah.app.MakeFormFragment"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:text="遞交單位"
            android:layout_gravity="center"
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:textStyle="bold" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:paddingLeft="5dp"
            android:paddingRight="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_receiver" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/button"
                android:layout_weight="1"
                android:onClick="onCancelButtonClicked" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:id="@+id/button2"
                android:layout_weight="1"
                android:onClick="onSubmitButtonClicked" />
        </LinearLayout>


    </LinearLayout>















</ScrollView>